# pr-practice

./: .gitmodules  LICENSE  README.md
bogoworld/: README.md  main.py
docs/: CODE_ACCEPTED.md  CODE_REVIEW.md  CONTRIBUTING.md  FEATURE_BRANCH.md  FORK.md  PULL_REQUEST.md  humans.txt
hello-world/Jordan_Taylor_plus/: hello-world
hello-world/TacoCat/: .clang-format  RendererConsole.cpp  figlet.txt
hello-world/brysonsteck/: settings.gradle
hello-world/brysonsteck/app/src/main/res/values/: strings.xml  themes.xml
hello-world/bryzinga/: .gitignore  README.md
hello-world/bryzinga/app/: build.gradle
hello-world/bryzinga/app/src/main/: AndroidManifest.xml
hello-world/bryzinga/app/src/main/java/org/codehuddle/helloAndroid/: MainActivity.java
hello-world/bryzinga/app/src/main/res/layout/: activity_main.xml
hello-world/bryzinga/app/src/main/res/values/: colors.xml
hello-world/bryzinga/app/src/main/res/values-night/: themes.xml
hello-world/bryzinga/gradle/wrapper/: gradle-wrapper.properties
hello-world/fadein/: .gitignore  Makefile  README.md  hello_arm.s  hello_x86-64.s
hello-world/jordan-taylor-usu/: README.md  index.html  script.js  style.css
hello-world/pharphunuse/: README.md  hello-world
hello-world/simponic/: .gitignore  Makefile  boot.asm  entry.asm  kernel.c  readme.org
hello-world/sjtolley/: Makefile  README.md  emulator.c  emulator.h  hello_world  main.c
hello-world/tacocat01/: .gitignore  CMakeLists.txt  README.md  RendererConsole.hpp  hello.cpp  rlutil.h
hello-world/willrandship/: main.py
hello-world/yage/: hello-world.md
(+1 files in other folders)
